# TKOM

./: .gitignore  README.md  example.conc  example.go
Translator/: CMakeLists.txt
Translator/include/: Source.h
Translator/include/Exceptions/: Utils.h
Translator/include/Lexer/: Characters.h  Exceptions.h  Lexer.h  Token.h
Translator/include/Logger/: Logger.h
Translator/include/Parser/: Exceptions.h  Nodes.h  Parser.h  Scope.h  Tree.h
Translator/include/Translator/: Go.h  Translator.h
Translator/src/: CMakeLists.txt  Source.cpp  Translator.cpp  main.cpp
Translator/src/Lexer/: Characters.cpp  Exceptions.cpp  Lexer.cpp  Token.cpp
Translator/src/Logger/: Logger.cpp
Translator/src/Parser/: Exceptions.cpp  Nodes.cpp  Nodes.cpp.orig  Parser.cpp  Parser.cpp.orig  Scope.cpp  Tree.cpp
Translator/src/Translator/: Go.cpp
tkom/: package.json
tkom/syntaxes/: tkom.tmLanguage  tkom.tmLanguage.json  tkom.tmlanguage
tkom/themes/: tkom.tmTheme  tkom.tmTheme.json
